--- a/composer.json
+++ b/composer.json
@@ -11,21 +11,13 @@
 		"php": ">=5.4.0"
 	},
 	"autoload": {
-		"classmap": [
-			"src/migrations"
-		],
 		"psr-4": {
 			"Imvkmark\\SlDeploy\\": "src/SlDeploy"
 		}
 	},
-	"repositories": [
-		{
-			"type": "composer",
-			"url": "http://packagist.phpcomposer.com"
-		},
-		{
-			"packagist": false
-		}
-	],
+	"config": {
+		"preferred-install": "dist"
+	},
+
 	"minimum-stability": "dev"
 }
